--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -28,9 +28,9 @@ comments: false
             <input type="text" class="col-md-9 form-control" ng-model="options.twitter" id="twitter" placeholder="Your twitter account"/>
         </div>
         <label for="theme" class="col-md-3 control-label">Theme</label>
-		<ui-select ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes" id="theme">
+		<select ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes" id="theme">
 			<option value="">Theme</option>
-			</ui-select>
+		</select>
 		<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
 			<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 
