--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -60,6 +60,6 @@ comments: false
 			</fieldset>
 		</form>
     </div>
-	<div>{{ $scope.options | json }}</div>
+	<div>{{ options | json }}</div>
 	
 {% endraw %}
