--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -49,7 +49,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label" for="theme">Theme</label>
 			  <div class="controls">
-				<select id="theme" name="theme" class="input-large" ng-init="options.selectedTheme = options[0]" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
+				<select id="theme" name="theme" class="input-large" ng-init="" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
 			  </div>
 			</div>
 
