--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -50,6 +50,7 @@ comments: false
 			  <label class="control-label" for="theme">Theme</label>
 			  <div class="controls">
 				<select id="theme" name="theme" class="input-large" ng-init="" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
+				<p class="help-block">Themes are from <a href="http://bootswatch.com">http://bootswatch.com</a></p>
 			  </div>
 			</div>
 
