--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -22,7 +22,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label" for="pageName">Page name</label>
 			  <div class="controls">
-				<input id="pageName" name="pageName" ng-model="options.forkName"  ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" placeholder="xyz.github.io" class="input-large" required="" type="text">
+				<input id="pageName" name="pageName" ng-model="options.forkName"  ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" placeholder="xyz.github.io" class="form-control" required="" type="text">
 				<p class="help-block">This will be the address of your blog</p>
 			  </div>
 			</div>
@@ -31,7 +31,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label" for="pageSlogan">Slogan</label>
 			  <div class="controls">
-				<input id="pageSlogan" name="pageSlogan" ng-model="options.forkSlogan" placeholder="Yihaaaa" class="input-large" required="" type="text">
+				<input id="pageSlogan" name="pageSlogan" ng-model="options.forkSlogan" placeholder="Yihaaaa" class="form-control" required="" type="text">
 				<p class="help-block">Text in the upper left cornder</p>
 			  </div>
 			</div>
@@ -40,7 +40,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label" for="authorName">Your Name</label>
 			  <div class="controls">
-				<input id="authorName" name="authorName" ng-model="options.forkRealName" placeholder="placeholder" class="input-large" type="text">
+				<input id="authorName" name="authorName" ng-model="options.forkRealName" placeholder="placeholder" class="form-control" type="text">
 				<p class="help-block">Provide your real name or use your alias</p>
 			  </div>
 			</div>
@@ -49,7 +49,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label" for="theme">Theme</label>
 			  <div class="controls">
-				<select id="theme" name="theme" class="input-large" ng-init="" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
+				<select id="theme" name="theme" class="form-control" ng-init="" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
 				<p class="help-block">Themes are from <a href="http://bootswatch.com">http://bootswatch.com</a></p>
 			  </div>
 			</div>
