--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -20,8 +20,8 @@ comments: false
 
 			<!-- Text input-->
 			<div class="control-group">
-			  <label class="control-label col-sm-2" style="text-align:left;" for="pageName">Page name</label>
-			  <div class="controls col-sm-10">
+			  <label class="control-label col-md-1" style="text-align:left;" for="pageName">Page name</label>
+			  <div class="controls col-md-11">
 					<input id="pageName" name="pageName" ng-model="options.forkName"  ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" placeholder="xyz.github.io" class="form-control" required="" type="text">
 					<p class="help-block">This will be the address of your blog</p>
 			  </div>
