--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -32,7 +32,7 @@ comments: false
 			  <label class="control-label col-sm-2" style="text-align:left;" for="pageSlogan">Slogan</label>
 			  <div class="controls col-sm-10">
 				<input id="pageSlogan" name="pageSlogan" ng-model="options.forkSlogan" placeholder="Yihaaaa" class="form-control" required="" type="text">
-				<p class="help-block">Text in the upper left cornder</p>
+				<p class="help-block">Text in the upper left corner</p>
 			  </div>
 			</div>
 
