--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -49,7 +49,7 @@ comments: false
 			<div class="control-group">
 			  <label class="control-label col-sm-2" style="text-align:left;" for="theme">Theme</label>
 			  <div class="controls col-sm-10">
-				<select id="theme" name="theme" class="form-control" ng-init="options.selectedTheme = availableThemes[0]" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
+				<select id="theme" name="theme" class="form-control" ng-init="options.selectedTheme = options.availableThemes[0]" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
 				<p class="help-block">Themes are from <a href="http://bootswatch.com">http://bootswatch.com</a></p>
 			  </div>
 			</div>
