--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -54,10 +54,12 @@ comments: false
 			  </div>
 			</div>
 
-			<div class="container col-sm-12" style="margin-top:15px;margin-bottom:15px">
+			<div class="container col-sm-11" style="margin-top:15px;margin-bottom:15px">
 				<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 			</div>
-			
+			<div class="container col-sm-1" ng-show="success">
+				Successful!!! Please visit <a href="options.forkName" target="_blank">{{options.forkName}}</a>
+			</div>
 			</fieldset>
 		</form>
 	</div>
