--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -23,7 +23,7 @@ comments: false
 			  <label class="control-label col-sm-2" style="text-align:left;" for="pageName">Page name</label>
 			  <div class="controls col-sm-10">
 					<input id="pageName" name="pageName" ng-model="options.forkName"  ng-model-options="{ debounce: 2000 }" ng-change="checkUnique()" placeholder="xyz.github.io" class="form-control" required="" type="text">
-					<p class="help-block">This will be the address of your blog</p>
+					<p class="help-block">This will be the address of your blog (please check if the address is available)</p>
 			  </div>
 			</div>
 
