--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -54,11 +54,13 @@ comments: false
 			  </div>
 			</div>
 
-			<div class="container col-sm-2" style="margin-top:15px;margin-bottom:15px">
-				<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
-			</div>
-			<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
-				Successful!!! Please visit <a href="options.forkName" target="_blank">{{options.forkName}}</a>
+			<div class="row">
+				<div class="container col-sm-2" style="margin-top:15px;margin-bottom:15px">
+					<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
+				</div>
+				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
+					<p>Successful!!! Please visit <a href="options.forkName" target="_blank">{{options.forkName}}</a></p>
+				</div>
 			</div>
 			</fieldset>
 		</form>
