--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -59,7 +59,7 @@ comments: false
 					<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 				</div>
 				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
-					<p>Successful!!! Please visit <a href="options.forkName" target="_blank">{{options.forkName}}</a></p>
+					<p>Successful!!! Please visit <a href="{{options.forkName}}" target="_blank">{{options.forkName}}</a></p>
 				</div>
 			</div>
 			</fieldset>
