--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -55,11 +55,11 @@ comments: false
 			</div>
 
 			<div class="row">
-				<div class="container col-sm-2" style="margin-top:15px;margin-bottom:15px">
+				<div class="container col-sm-2" >
 					<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
 				</div>
 				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
-					<p>Successful!!! Please visit <a href="{{options.forkName}}" target="_blank">{{options.forkName}}</a></p>
+					<h2>Successful!!! Please visit <a href="{{options.forkName}}" target="_blank">{{options.forkName}}</a></h2>
 				</div>
 			</div>
 			</fieldset>
