--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -56,9 +56,9 @@ comments: false
 
 			<div class="row">
 				<div class="container col-sm-2" >
-					<button class='btn btn-warning pull-left' ng-click="fork()">Create a Fork</button>
+					<button class='btn btn-warning pull-left' ng-click="fork()" style="margin-top:15px;margin-bottom:15px">Create a Fork</button>
 				</div>
-				<div class="progress progress-striped active container col-sm-10" ng-show="!success">
+				<div class="progress progress-striped active container col-sm-10" ng-show="!success" style="margin-top:15px;margin-bottom:15px">
 				  <div class="progress-bar" style="width: {{progress}}%"></div>
 				</div>
 				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
