--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -58,7 +58,7 @@ comments: false
 				<div class="container col-sm-2" >
 					<button class='btn btn-warning pull-left' ng-click="fork()" style="margin-top:15px;margin-bottom:15px">Create a Fork</button>
 				</div>
-				<div class="progress progress-striped active container col-sm-9" ng-hide="success" style="left: 20px; margin-top:25px;margin-bottom:15px">
+				<div class="progress progress-striped active container col-sm-9" ng-hide="success" style="left: 20px; margin-top:25px;margin-bottom:15px; padding:0px">
 				  <div class="progress-bar" style="width: {{progress}}%"></div>
 				</div>
 				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
