--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -10,7 +10,10 @@ comments: false
         <h1>Make a clone for you!</h1>
         <p>Create a copy of this site on your own GitHub account. After the clone is ready you can create/edit your own content on your page. If you dive into you can even customize the page because you have complete control over all sources. Try it...</p>
         <h2>Instructions</h2>
-        <p>Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork...</p>
+        <p>
+			Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork... The status bar should go to 80% very fast. This means 
+			everything is fine. It then waits for GitHub to render the page which can take up to 10 minutes (normally it is faster).
+		</p>
 		
 		<form class="form-horizontal" role="form">
 			<fieldset>
