--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -53,7 +53,7 @@ comments: false
 			  <label class="control-label col-sm-2" style="text-align:left;" for="theme">Theme</label>
 			  <div class="controls col-sm-10">
 				<select id="theme" name="theme" class="form-control" ng-init="options.selectedTheme = options.availableThemes[0]" ng-model="options.selectedTheme" ng-options="c.name for c in options.availableThemes"></select>
-				<p class="help-block">Themes are from <a href="http://bootswatch.com">http://bootswatch.com</a></p>
+				<p class="help-block">Themes are from <a href="http://bootswatch.com" target="_blank">http://bootswatch.com</a></p>
 			  </div>
 			</div>
 
