--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -65,7 +65,7 @@ comments: false
 				  <div class="progress-bar" style="width: {{progress}}%"></div>
 				</div>
 				<div ng-cloak class="container col-sm-10 ng-hide" ng-show="success">
-					<h4>Successful!!! Please visit <a href="https://{{options.forkName}}" target="_blank">{{options.forkName}}</a></h4>
+					<h4 style="padding-left:10px;padding-top:10px;" class="text-success">Successful!!! Please visit <a href="https://{{options.forkName}}" target="_blank">{{options.forkName}}</a></h4>
 				</div>
 			</div>
 			</fieldset>
