--- a/app/admin/fork.html
+++ b/app/admin/fork.html
@@ -14,7 +14,9 @@ comments: false
 			Login to this page with your GitHub account. Enter the name of your blog (xyz.github.com) and a page slogan. Click on fork... The status bar should go to 80% very fast. This means 
 			everything is fine. It then waits for GitHub to render the page which can take up to 10 minutes (normally it is faster).
 		</p>
-		
+		<p>
+			After your page is ready you can revoke the permission to access the repository in your github account settings...
+		</p>
 		<form class="form-horizontal" role="form">
 			<fieldset>
 
