--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -16,11 +16,11 @@ comments: false
         </div>
         <div>
             <form class="form-horizontal" role="form">
-                <div class="form-group col-md-5">
+                <div class="form-group col-md-4">
                       <label for="date" class="control-label">Date</label>
                       <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
                 </div>
-                <div class="form-group col-md-7">
+                <div class="form-group offset1 col-md-7">
                     <label for="title" class="control-label">Title</label>
                     <input type="text" class="form-control" id="title" ng-model="options.title">
                  </div>
