--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -13,6 +13,7 @@ comments: false
                 <button type="button" class="btn btn-danger btn-middle" ng-click="delete()">Delete</button>
             </div>
         </div>
+		<div class="clearfix"></div>
         <div>
             <form class="form-horizontal" role="form">
                 <div class="form-group col-md-4">
