--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -16,8 +16,7 @@ comments: false
 		<div style="margin-top: 0px" class="page-header">
 			<h1 style="float:left">Import</small></h1>
 			<div style="padding-top:25px;text-align:right">
-				<input type="file" id="file" name="file"/>
-				<button ng-click="add()">Add</button>
+				<input type="file" multiple="" name="file" id="file">
 			</div>
 		</div>
     </div>
