--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -18,6 +18,9 @@ comments: false
 			<div style="padding-top:25px;text-align:right">
 				<input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
 			</div>
+            <ul>
+                <li ng-repeat="import">{{import.key}}</li>
+            </ul>
 		</div>
     </div>
 	
