--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -19,7 +19,7 @@ comments: false
 				<input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
 			</div>
             <ul>
-                <li ng-repeat="import">{{import.key}}</li>
+                <li ng-repeat="(key, content) in import">{{key}}</li>
             </ul>
 		</div>
     </div>
