--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -15,7 +15,7 @@ comments: false
         </div>
 		<div style="margin-top: 0px" class="page-header">
 			<h1 style="float:left">Import</small></h1>
-			<div style="padding-top:25px;text-align:right">
+			<div class="row">
 				<input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
 			</div>
             <ul>
