--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -17,6 +17,7 @@ comments: false
         <div class="row">
             <input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
         </div>
+        <button type="button" class="btn btn-danger btn-middle" ng-click="doImport()">Export</button>
         <table>
             <tr ng-repeat="(key, user) in import">
                 <td>{{key}}</td>
