--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -7,12 +7,11 @@ comments: false
 {% raw %}
 
     <div style="padding-bottom:15px" ng-controller="ImportExportCtrl" class="containter">
-        <div style="margin-top: 0px" class="page-header">
-            <h1 style="float:left">Export</small></h1>
-            <div style="padding-top:25px;text-align:right">
-                <button type="button" class="btn btn-danger btn-middle" ng-click="zip()">Export</button>
-            </div>
+        <h1 style="float:left">Export</small></h1>
+        <div style="padding-top:25px;text-align:right">
+			<button type="button" class="btn btn-danger btn-middle" ng-click="zip()">Export</button>
         </div>
+		<progressbar class="progress-striped active" value="dynamic" type="info"></progressbar>
         <h1>Import</h1>
         <div class="row">
             <input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
