--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -11,8 +11,8 @@ comments: false
 			<h1>Export</h1>
 		</div>
 		<div class="row">
-			<button type="button" class="btn btn-danger btn-middle" ng-click="zip()">Export</button>
-			<progressbar class="progress-striped active" value="dynamic" type="info"></progressbar>
+			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
+			<progressbar class="col-md-10 progress-striped active" value="dynamic" type="info" ></progressbar>
 		</div>
         
 		<h1>Import</h1>
