--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -12,7 +12,9 @@ comments: false
 		</div>
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
-			<progressbar class="progress-striped active" value="exportStatus" type="info" ></progressbar>
+			<div class="col-md-10">
+				<progressbar class="progress-striped active" value="exportStatus" type="info" ></progressbar>
+			</div>
 		</div>
         
 		<h1>Import</h1>
