--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -13,7 +13,7 @@ comments: false
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
 			<div class="col-md-10">
-				<progressbar class="progress-striped active" value="exportStatus" type="info" >{{exportStatus}} / {{maxValue}}</progressbar>
+				<progressbar class="progress-striped active" value="exportStatus" type="info" >{{processingPostNr}} / {{maxValue}}</progressbar>
 			</div>
 		</div>
         
