--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -25,7 +25,7 @@ comments: false
 						<div ng-click="showContent(value)">{{value}}</div>
 					</td>
 					<td>
-						<input type = "checkbox" id="{{key}}" name="selection[]" value="{{value}}" ng-click="toggleExportSelection(value)"/>
+						<input type="checkbox" id="{{key}}" name="selection[]" value="{{value}}" check-list='selection[]'/>
 					</td>
 				</tr>
 			</table>
