--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -26,7 +26,7 @@ comments: false
 					</td>
 					<td>
 						<!-- http://stackoverflow.com/questions/14514461/how-can-angularjs-bind-to-list-of-checkbox-values -->
-						<input type="checkbox" id="{{key}}" value="{{value}}" check-list='export[]'/>
+						<input type="checkbox" id="{{key}}" value="{{value}}" check-list='export'/>
 					</td>
 				</tr>
 			</table>
