--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -19,7 +19,7 @@ comments: false
 		<div class="row">
 			<table>
 				<th>Post</th>
-				<th><a href="" ng-click="selectAll()">Select All</a><a href="" ng-click="selectAll()">Unselect All</a></th>
+				<th><a href="" ng-click="selectAll()">Select All</a><a href="" ng-click="unselectAll()">Unselect All</a></th>
 				<tr ng-repeat="(key, value) in export">  
 					<td>
 						<div ng-click="showContent(value)">{{value}}</div>
