--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -12,9 +12,9 @@ comments: false
 		</div>
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
-			<div class="col-md-10">
-				<progressbar class="progress-striped active" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
-			</div>
+		</div>
+		<div class="row">
+			<progressbar class="progress-striped active" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
 		</div>
 		<div class="row">
 			<table>
