--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -13,7 +13,9 @@ comments: false
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
 		</div>
-		<progressbar class="progress-striped active" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
+		<div class="row">
+			<progressbar class="progress-striped active" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
+		</div>
 		<div class="row">
 			<table>
 				<th>Post</th>
