--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -12,7 +12,7 @@ comments: false
 		</div>
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
-            <div class="col-md-9">
+            <div class="col-md-10 padding-top:10px">
                 <progressbar class="progress-striped active" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
             </div>
 		</div>
