--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -13,7 +13,11 @@ comments: false
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
             <div class="col-md-10 padding-top:10px">
-                <progressbar class="progress-striped active" style="margin-top:5px" value="exportStatus" type="{{type}}" >{{processingPostNr}} / {{maxValue}}</progressbar>
+                <progressbar class="progress-striped active" style="margin-top:5px" value="exportStatus" type="{{type}}" >
+                    <span style="color:black; white-space:nowrap;">
+                        {{processingPostNr}} / {{maxValue}}
+                    </span>
+                </progressbar>
             </div>
 		</div>
 
