--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -13,7 +13,7 @@ comments: false
 		<div class="row">
 			<button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
             <div class="col-md-10 padding-top:10px">
-                <progressbar class="progress-striped active" style="margin-top:5px" value="exportStatus" type="{{type}}" >
+                <progressbar class="" style="margin-top:5px" value="exportStatus" type="{{type}}" >
                     <span style="color:black; white-space:nowrap;">
                         {{processingPostNr}} / {{maxValue}}
                     </span>
