--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -31,6 +31,7 @@ comments: false
 					</td>
 					<td>
 						<!-- http://stackoverflow.com/questions/14514461/how-can-angularjs-bind-to-list-of-checkbox-values -->
+                        <!-- https://github.com/vitalets/checklist-model -->
 						<input type="checkbox" id="{{key}}" value="{{value}}" check-list='exportSelection'/>
 					</td>
 				</tr>
@@ -42,12 +43,14 @@ comments: false
         </div>
         <button type="button" class="btn btn-danger btn-middle" ng-click="doImport()">Import Selected</button>
         <table>
-            <tr ng-repeat="(key, user) in import">
+            <th>Post</th>
+            <th><a href="" ng-click="selectAll()">Select All</a> / <a href="" ng-click="unselectAll()">Unselect All</a></th>
+            <tr ng-repeat="(key, value) in import">
                 <td>
 					<div ng-click="showContent(key)">{{key}}</div>
 				</td>
                 <td>
-                    <input type = "checkbox" id="{{key}}" name="selection[]" value="{{key}}" ng-click="toggleSelection(key)"/>
+                    <input type = "checkbox" id="{{key}}" value="{{key}}" check-list='importSelection'/>
                 </td>
             </tr>
         </table>
