--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -24,7 +24,7 @@ comments: false
 		<div class="row">
 			<table>
 				<th>Post</th>
-				<th><a href="" ng-click="selectAll()">Select All</a> / <a href="" ng-click="unselectAll()">Unselect All</a></th>
+				<th><a href="" ng-click="selectAllExport()">Select All</a> / <a href="" ng-click="unselectAllExport()">Unselect All</a></th>
 				<tr ng-repeat="(key, value) in export">  
 					<td>
 						<div ng-click="showContent(value)">{{value}}</div>
@@ -44,7 +44,7 @@ comments: false
         <button type="button" class="btn btn-danger btn-middle" ng-click="doImport()">Import Selected</button>
         <table>
             <th>Post</th>
-            <th><a href="" ng-click="selectAll()">Select All</a> / <a href="" ng-click="unselectAll()">Unselect All</a></th>
+            <th><a href="" ng-click="selectAllImport()">Select All</a> / <a href="" ng-click="unselectAllImport()">Unselect All</a></th>
             <tr ng-repeat="(key, value) in import">
                 <td>
 					<div ng-click="showContent(key)">{{key}}</div>
