--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -6,7 +6,7 @@ comments: false
 ---
 {% raw %}
 
-    <div style="padding-bottom:15px" ng-controller="ImportExportCtrl" class="containter">
+    <div style="padding-bottom:15px" ng-controller="ExportCtrl" class="containter">
         <div class="row">
 			<h1>Export</h1>
 		</div>
@@ -37,6 +37,8 @@ comments: false
 				</tr>
 			</table>
         </div>
+    </div>
+<div style="padding-bottom:15px" ng-controller="ImportCtrl" class="containter">
 		<h1>Import</h1>
         <div class="row">
             <input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
