--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -52,7 +52,7 @@ comments: false
 					<div ng-click="showContent(key)">{{key}}</div>
 				</td>
                 <td>
-                    <input type="checkbox" id="{{key}}" value="{{value}}" check-list='importSelection'/>
+                    <input type="checkbox" id="{{key}}" value="{{key}}" check-list='importSelection'/>
                 </td>
             </tr>
         </table>
