--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -52,7 +52,7 @@ comments: false
 					<div ng-click="showContent(key)">{{key}}</div>
 				</td>
                 <td>
-                    <input type="checkbox" id="{{key}}" value="{{key}}" ng-click="toggleSelection(key)/>
+                    <input type="checkbox" id="{{key}}" value="{{key}}" ng-click="toggleSelection(key)" />
                 </td>
             </tr>
         </table>
