--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -25,7 +25,7 @@ comments: false
 			<table>
 				<th>Post</th>
 				<th><a href="" ng-click="selectAllExport()">Select All</a> / <a href="" ng-click="unselectAllExport()">Unselect All</a></th>
-				<tr ng-repeat="(key, value) in export">  
+				<tr ng-repeat="(key, value) in export">
 					<td>
 						<div ng-click="showContent(value)">{{value}}</div>
 					</td>
@@ -38,23 +38,26 @@ comments: false
 			</table>
         </div>
     </div>
-<div style="padding-bottom:15px" ng-controller="ImportCtrl" class="containter">
-		<h1>Import</h1>
+    <div style="padding-bottom:15px" ng-controller="ImportCtrl" class="containter">
+        <h1>Import</h1>
         <div class="row">
             <input type="file" multiple="" name="file" id="file" onchange="angular.element(this).scope().add(this)">
         </div>
         <button type="button" class="btn btn-danger btn-middle" ng-click="doImport()">Import Selected</button>
-        <table>
-            <th>Post</th>
-            <th><a href="" ng-click="selectAllImport()">Select All</a> / <a href="" ng-click="unselectAllImport()">Unselect All</a></th>
-            <tr ng-repeat="(key, value) in import">
-                <td>
-					<div ng-click="showContent(value)">{{value}}</div>
-				</td>
-                <td>
-                    <input type="checkbox" value="{{value}}" check-list='importSelection'/>
-                </td>
-            </tr>
-        </table>
+        <div class="row">
+            <table>
+                <th>Post</th>
+                <th><a href="" ng-click="selectAllImport()">Select All</a> / <a href="" ng-click="unselectAllImport()">Unselect All</a></th>
+                <tr ng-repeat="(key, value) in import">
+                    <td>
+                        <div ng-click="showContent(value)">{{value}}</div>
+                    </td>
+                    <td>
+                        <input type="checkbox" value="{{value}}" check-list='importSelection'/>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 	
 {% endraw %}
