--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -6,7 +6,7 @@ comments: false
 ---
 {% raw %}
 
-    <div style="padding-bottom:15px" ng-controller="ExportCtrl" class="containter">
+    <div style="padding-bottom:15px" ng-controller="ExportCtrl">
         <div class="row">
 			<h1>Export</h1>
 		</div>
