--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -9,7 +9,7 @@ comments: false
     <div class="containter" style="padding-bottom:15px">
         <div ng-controller="ExportCtrl">
             <h1>Export</h1>
-            <div class="row">
+            <div>
                 <button type="button" class="col-md-2 btn btn-danger btn-middle" ng-click="zip()">Export</button>
                 <div class="col-md-10 padding-top:10px">
                     <progressbar class="" style="margin-top:5px" value="exportStatus" type="{{type}}" >
