--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -28,7 +28,7 @@ comments: false
         </div>
 
         <div class="clearfix"></div>
-        <textarea id="target-editor" style="display:none;"></textarea>
+        <textarea id="target-editor" style="display:none;color:blue;"></textarea>
     </div>
 	
 {% endraw %}
