--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -10,7 +10,7 @@ comments: false
         <div style="margin-top: 0px" class="page-header">
             <h1 style="float:left">Edit</small></h1>
             <div style="padding-top:25px;text-align:right">
-                <button type="button" class="btn btn-danger btn-middle" ng-click="delete()" ng-hide="options.isNewContent">Delete</button>
+                <button ng-cloak type="button" class="btn btn-danger btn-middle" ng-click="delete()" ng-hide="options.isNewContent">Delete</button>
             </div>
         </div>
 		<div class="clearfix"></div>
