--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -11,6 +11,7 @@ comments: false
             <h1 style="float:left">Edit</small></h1>
             <div style="padding-top:25px;text-align:right">
                 <button ng-cloak type="button" class="btn btn-danger btn-middle" ng-click="delete()" ng-hide="options.isNewContent">Delete</button>
+				<div ng-show="options.isNewContent">&nbsp;</div>
             </div>
         </div>
 		<div class="clearfix"></div>
