--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -18,6 +18,20 @@ comments: false
 		<div class="clearfix"></div>
         <div>
             <form class="form-horizontal" role="form">
+				<div class="row">
+					<div class="col-xs-6 col-md-6 form-group">
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+							<input type="text" required="" placeholder="Your Name" name="name" id="name" class="form-control">
+						</div>
+					</div>
+					<div class="col-xs-6 col-md-6 form-group">
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+							<input type="email" placeholder="Mail Address" name="email" id="email" class="form-control">
+						</div>
+					</div>
+				</div>
                 <div class="form-group col-md-4">
                       <label for="date" class="control-label">Date</label>
                       <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
