--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -22,8 +22,8 @@ comments: false
 				<div class="row">
 					<div class="col-xs-6 col-md-6 form-group">
 						<div class="input-group">
-							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-							<input type="text" required="" placeholder="Your Name" name="name" id="name" class="form-control">
+						  <label for="date" class="control-label">Date</label>
+						  <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
 						</div>
 					</div>
 					<div class="col-xs-6 col-md-6 form-group">
