--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -22,7 +22,8 @@ comments: false
 				<div class="row">
 					<div class="col-xs-6 col-md-6 form-group">
 						<div class="input-group">
-						  <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
 						</div>
 					</div>
 					<div class="col-xs-6 col-md-6 form-group">
@@ -32,11 +33,15 @@ comments: false
 						</div>
 					</div>
 				</div>
-				<textarea id="target-editor" style="display:none;color:#464545;"></textarea>
+				
 			
 			</form>
 		</div>
 			<form class="form" role="form">
+                <div class="form-group col-md-4">
+                      <label for="date" class="control-label">Date</label>
+                      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
+                </div>
                 <div class="form-group col-md-8">
                     <label for="title" class="control-label">Title</label>
                     <input type="text" class="form-control" id="title" ng-model="options.title">
@@ -45,7 +50,7 @@ comments: false
         </div>
 
         <div class="clearfix"></div>
-
+        <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
     </div>
 	
 {% endraw %}
