--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -22,7 +22,7 @@ comments: false
 				<div class="row">
 					<div class="col-xs-4 col-md-4 form-group">
 						<div class="input-group">
-							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
 							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date"/>
 						</div>
 					</div>
