--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -23,13 +23,13 @@ comments: false
 					<div class="col-xs-4 col-md-4 form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date" placeholder="Title" />
+							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date" />
 						</div>
 					</div>
 					<div class="col-xs-8 col-md-8 form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
-							<input type="text" class="form-control" id="title" ng-model="options.title">
+							<input type="text" class="form-control" id="title" ng-model="options.title" placeholder="Title" />
 							
 						</div>
 					</div>
