--- a/raspi.html
+++ b/raspi.html
@@ -20,7 +20,7 @@ group: navigation
 
     {% include widgets/interactive-table.html %}
 
-</div><!-- /.container -->
+</div></div>
 
 <script>
     var ratyElements =  $('.raty');
