--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -20,13 +20,13 @@ comments: false
 		<div class="col-sm-12">
             <form class="form" role="form">
 				<div class="row">
-					<div class="col-md-4 form-group">
+					<div class="col-xs-12 col-md-4 form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
 							<input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="options.date" is-open="opened" min="minDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" id="date" />
 						</div>
 					</div>
-					<div class="col-md-8 form-group">
+					<div class="col-xs-12 col-md-8 form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
 							<input type="text" class="form-control" id="title" ng-model="options.title" placeholder="Title" />
