--- a/tags.html
+++ b/tags.html
@@ -9,6 +9,7 @@ comments: false
 
 {% assign tags_list = site.tags %}
 {% include widgets/tagCloud.html %}
+{% include widgets/categoryCloud.html %}
 
 
 {% for tag in site.tags %} 
