--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -34,7 +34,8 @@ comments: false
 					</div>
 				</div>
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
-				<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save()" class="btn btn-primary" type="button" disabled="disabled">
+				<br />
+				<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save()" class="btn btn-primary pull-right" type="button" disabled="disabled">
 					Save
 				</button>
 			</form>
