--- a/app/admin/edit.html
+++ b/app/admin/edit.html
@@ -36,8 +36,9 @@ comments: false
 			    <textarea id="target-editor" style="display:none;color:#464545;"></textarea>
 				<br />
 				<button ng-disabled="(editForm.$dirty && editForm.$invalid) || editForm.$pristine" ng-click="save()" class="btn btn-primary pull-right" type="button" disabled="disabled">
-					Save
+					Submit
 				</button>
+				<br />
 			</form>
 		</div>
     </div>
